--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1,11 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "# Our project\n",
+    "## Table of Contents\n",
+    "- Introduction\n",
+    "- Models  \n",
+    "    Objective: \n",
+    "    $Minimize\\quad turnaround\\ time + \\lambda\\ fairness + \\mu\\ responsiveness $\n",
+    "    - Perfect information\n",
+    "        1. Knowing arrival time + duration\n",
+    "        2. +multi-core\n",
+    "        3. +dependency\n",
+    "    - Robust\n",
+    "        1. Robust duration\n",
+    "        2. +robust arrival time\n",
+    "    - (Optional) Stochastic\n",
+    "- Solutions\n",
+    "- Discussion (comparison with existing methods)\n",
+    "- Conclusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -25,5 +48,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
