refactor & update the table of content

--- a/Course_Project.ipynb
+++ b/Course_Project.ipynb
@@ -4,22 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CS/ECE/ISyE 524 &mdash; Introduction to Optimization &mdash; Spring 2018 ###\n",
+    "## <center>  CS/ECE/ISyE 524 &mdash; Introduction to Optimization &mdash; Spring 2018 </center>\n",
     "\n",
-    "# Optimizing Multi-core CPU Sheduling #\n",
+    "# <center> Optimizing Multi-core CPU Scheduling </center>\n",
     "\n",
-    "#### Haoran Qiu (email address), Jian Wu (jwu384@wisc.com), Tao Ji (email address), and Yanting Liang (email address)\n",
+    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.com), Tao Ji (email address), and Yanting Liang (email address) </center>\n",
+    "#### <center> Instructor: Prof. Laurent Lessard </center>\n",
+    "#### <center> May 7<sup>th</sup>, 2018 </center>\n",
     "\n",
-    "*****\n",
-    "\n",
+    "*****"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Table of Contents\n",
     "\n",
     "1. [Introduction](#1.-Introduction)\n",
     "1. [Mathematical Model](#2.-Mathematical-model)\n",
+    "  1. [Perfect Information](#2.1.-Perfect-Information)\n",
+    "    1. [Knowing Arrival Time & Duration](#2.1.1.-Knowing-Arrival-Time&-Duration)\n",
+    "    1. [Multicores](#2.1.2.-Multicores)\n",
+    "    1. [Process Dependency](#2.1.3.-Process-Dependency)\n",
+    "  1. [Robust Integer Programming](#2.2.-Robust-Programming)\n",
+    "    1. [Unknown Duration](#2.2.1.-Unknown-Duration)\n",
+    "    1. [Unknown Duration & Unknown Arrival Time](#2.2.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
+    "  1. [Stochastic](#2.3.-Stochastic)\n",
+    "    1. [Unknown Duration](#2.3.1.-Unknown-Duation)\n",
+    "    1. [Unknown Duration & Unknown Arrival Time](#2.3.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
     "1. [Solution](#3.-Solution)\n",
     "1. [Results and Discussion](#4.-Results-and-discussion)\n",
-    "  1. [Optional Subsection](#4.A.-Feel-free-to-add-subsections)\n",
-    "1. [Conclusion](#5.-Conclusion)"
+    "1. [Conclusion](#5.-Conclusion)\n",
+    "1. [References](#6.-References)\n",
+    "\n",
+    "*****"
    ]
   },
   {
@@ -91,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
