--- a/Course_Project.ipynb
+++ b/Course_Project.ipynb
@@ -22,21 +22,24 @@
     "### Table of Contents\n",
     "\n",
     "1. [Introduction](#1.-Introduction)\n",
-    "1. [Mathematical Model](#2.-Mathematical-model)\n",
+    "  1. [Problem Description](#1.1.-Problem-Description)\n",
+    "  2. [Goals and Objectives](#1.2.-Goals-and-Objectives)\n",
+    "  3. [Report Outline](#1.3.-Report-Outline)\n",
+    "2. [Mathematical Model](#2.-Mathematical-Model)\n",
     "  1. [Perfect Information](#2.1.-Perfect-Information)\n",
     "    1. [Knowing Arrival Time & Duration](#2.1.1.-Knowing-Arrival-Time&-Duration)\n",
-    "    1. [Multicores](#2.1.2.-Multicores)\n",
-    "    1. [Process Dependency](#2.1.3.-Process-Dependency)\n",
-    "  1. [Robust Integer Programming](#2.2.-Robust-Programming)\n",
+    "    2. [Multicores](#2.1.2.-Multicores)\n",
+    "    3. [Process Dependency](#2.1.3.-Process-Dependency)\n",
+    "  2. [Robust Integer Programming](#2.2.-Robust-Programming)\n",
     "    1. [Unknown Duration](#2.2.1.-Unknown-Duration)\n",
-    "    1. [Unknown Duration & Unknown Arrival Time](#2.2.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
-    "  1. [Stochastic](#2.3.-Stochastic)\n",
+    "    2. [Unknown Duration & Unknown Arrival Time](#2.2.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
+    "  3. [Stochastic](#2.3.-Stochastic)\n",
     "    1. [Unknown Duration](#2.3.1.-Unknown-Duation)\n",
-    "    1. [Unknown Duration & Unknown Arrival Time](#2.3.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
-    "1. [Solution](#3.-Solution)\n",
-    "1. [Results and Discussion](#4.-Results-and-discussion)\n",
-    "1. [Conclusion](#5.-Conclusion)\n",
-    "1. [References](#6.-References)\n",
+    "    2. [Unknown Duration & Unknown Arrival Time](#2.3.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
+    "3. [Solution](#3.-Solution)\n",
+    "4. [Results and Discussion](#4.-Results-and-discussion)\n",
+    "5. [Conclusion](#5.-Conclusion)\n",
+    "6. [References](#6.-References)\n",
     "\n",
     "*****"
    ]
@@ -49,11 +52,33 @@
    "source": [
     "## 1. Introduction ##\n",
     "\n",
+    "### 1.1. Problem Description ###\n",
+    "\n",
+    "The **Operating System**(OS) is a really important piece of software present in virtually all computer systems, which manages computer hardware and softwares and provides common resources for computer programs. A computer program is a piece of code but it lives as a process when it is being executed. At the same time, there will be many processes that want to be executed. Time-sharing OS allows many users/processes to share the computing resources such as main memory, input/output(I/O) devices, files, etc.\n",
+    "\n",
+    "The OS has many components which work together to help carry out resource management duties. For example there is a memory manager(manages the usage of the main memory), various device drivers(carry out low-level interactions with hardware devices), I/O manager(handles data transfer between memory and I/O devices), process manager(creates and destroys processes), file system manager(manages the file system), etc. Another important component is the process scheduler, also known as the **Central Processing Unit**(CPU), which is the focus of this project.\n",
+    "\n",
+    "![A shot of processes running on a multicore CPU and the resource usage][flow]\n",
+    "\n",
+    "The job of the scheduler is to assign tasks to CPUs, i.e. what is the next process to be run on which CPU. For a computer, there could be multiple CPUs and each CPU could have multiple cores. For a process, it could generate a number of threads to be executed at the same time. Since every core in a CPU could run its assigned task at the same time, we could seen a core as the most basic execution unit. In addition, since a thread is similar as a process(and in some OS they are treat nearly the same way) we could seen a thread as a process. Therefore, the number of processes that can be run at the same time($X$) can be expressed by the multiplication of the number of CPUs($C$) and the number of cores per CPU($c_{i}$):\n",
+    "\n",
+    "$$\n",
+    "X = \\sum_{i=1}^{C} c_i\n",
+    "$$\n",
+    "\n",
+    "However, things are really complicated in reality. There may be dependencies or conflicts among different processes. A process cannot continue running without another process returning a result, or two processes are using the same resource so that they cannot be scheduled to run at the same time. In addition, scheduling among multicores brings more cost caused by **context switch**. When the ongoing process is being replaced by another process before it is done, its state information should be stored to somewhere else(main memory or hard disk) and the new process' state information(if exists) should be moved to CPU. This process is called context switch. Switching between different cores leads to more cost. Last but not least, a CPU cannot predict when a process will finish its execution and it is not possible for a CPU to know when a particular process will arrive.\n",
+    "\n",
+    "Considering all the complexities, we present a general model to solve this problem and offer an efficient solution for scheduling processes in multicore CPU.\n",
+    "\n",
+    "### 1.2. Goals and Objectives ###\n",
+    "\n",
+    "### 1.3. Report Outline ###\n",
+    "\n",
     "The first few sentences should give a quick overview of the entire project. Then, elaborate with a description of the problem that will be solved, a brief history (with [citations](https://en.wikipedia.org/wiki/Citation)) of how the problem came about, why it's important/interesting, and any other interesting facts you'd like to talk about. You should address and explain where the problem data is coming from (research? the internet? synthetically generated?) Also give an outline of the rest of the report.\n",
     "\n",
     "This section should be 300-600 words long, and **should be accessible to a general audience** (don't assume your reader has taken the class!). Feel free to include images if you think it'll be helpful:\n",
     "\n",
-    "![fixit flowchart][flow]\n",
+    "\n",
     "\n",
     "For more help on using Markdown, see [this reference](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet).\n",
     "\n",
@@ -185,7 +210,10 @@
     "collapsed": true
    },
    "source": [
-    "## Reference ##\n"
+    "## 6. Reference ##\n",
+    "\n",
+    "1. Operating Systems, Wikipedia, refer to https://en.wikipedia.org/wiki/Operating_system\n",
+    "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing"
    ]
   }
  ],
