--- a/Course_Project.ipynb
+++ b/Course_Project.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "The OS has many components which work together to help carry out resource management duties. For example there is a memory manager(manages the usage of the main memory), various device drivers(carry out low-level interactions with hardware devices), I/O manager(handles data transfer between memory and I/O devices), process manager(creates and destroys processes), file system manager(manages the file system), etc. Another important component is the process scheduler, also known as the **Central Processing Unit**(CPU), which is the focus of this project.\n",
     "\n",
-    "![A shot of processes running on a multicore CPU and the resource usage][flow]\n",
+    "![A shot of processes running on a multicore CPU and the resource usage](https://github.com/tony-wj/Julia_hw/blob/master/cpu_scheduling.png)\n",
     "\n",
     "The job of the scheduler is to assign tasks to CPUs, i.e. what is the next process to be run on which CPU. For a computer, there could be multiple CPUs and each CPU could have multiple cores. For a process, it could generate a number of threads to be executed at the same time. Since every core in a CPU could run its assigned task at the same time, we could seen a core as the most basic execution unit. In addition, since a thread is similar as a process(and in some OS they are treat nearly the same way) we could seen a thread as a process. Therefore, the number of processes that can be run at the same time($X$) can be expressed by the multiplication of the number of CPUs($C$) and the number of cores per CPU($c_{i}$):\n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "However, things are really complicated in reality. There may be dependencies or conflicts among different processes. A process cannot continue running without another process returning a result, or two processes are using the same resource so that they cannot be scheduled to run at the same time. In addition, scheduling among multicores brings more cost caused by **context switch**. When the ongoing process is being replaced by another process before it is done, its state information should be stored to somewhere else(main memory or hard disk) and the new process' state information(if exists) should be moved to CPU. This process is called context switch. Switching between different cores leads to more cost. Last but not least, a CPU cannot predict when a process will finish its execution and it is not possible for a CPU to know when a particular process will arrive.\n",
     "\n",
-    "Considering all the complexities, we present a general model to solve this problem and offer an efficient solution for scheduling processes in multicore CPU.\n",
+    "Considering all the complexities, we will present a general model in this report to solve this problem and offer an efficient solution for scheduling processes in multicore CPU.\n",
     "\n",
     "### 1.2. Goals and Objectives ###\n",
     "\n",
@@ -76,13 +76,11 @@
     "\n",
     "The first few sentences should give a quick overview of the entire project. Then, elaborate with a description of the problem that will be solved, a brief history (with [citations](https://en.wikipedia.org/wiki/Citation)) of how the problem came about, why it's important/interesting, and any other interesting facts you'd like to talk about. You should address and explain where the problem data is coming from (research? the internet? synthetically generated?) Also give an outline of the rest of the report.\n",
     "\n",
-    "This section should be 300-600 words long, and **should be accessible to a general audience** (don't assume your reader has taken the class!). Feel free to include images if you think it'll be helpful:\n",
-    "\n",
-    "\n",
+    "This section should be 300-600 words long, and **should be accessible to a general audience** (don't assume your reader has taken the class!).\n",
     "\n",
     "For more help on using Markdown, see [this reference](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet).\n",
     "\n",
-    "[flow]: https://s-media-cache-ak0.pinimg.com/736x/f5/75/c5/f575c53b93724808c6f0211890a54900.jpg"
+    "[shot]: https://github.com/tony-wj/Julia_hw/blob/master/cpu_scheduling.png"
    ]
   },
   {
