--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -54,11 +54,13 @@
     "\n",
     "### 1.1. Problem Description ###\n",
     "\n",
-    "The **Operating System**(OS) is a really important piece of software present in virtually all computer systems, which manages computer hardware and softwares and provides common resources for computer programs. A computer program is a piece of code but it lives as a process when it is being executed. At the same time, there will be many processes that want to be executed. Time-sharing OS allows many users/processes to share the computing resources such as main memory, input/output(I/O) devices, files, etc.\n",
+    "The **Operating System**(OS) is a really important piece of software present in virtually all computer systems, which manages computer hardware and softwares and provides common resources for computer programs. A computer program is a piece of code but it lives as a process when it is being executed. One of the duties of an operating system is to schedule processes to run on the computer. In 1950s, process scheduling was not an issue because there is not so much process so that the OS can serve all users/processes one by one. When it came to 1960s - early 1980s, multiprogramming and time-sharing evolves([history](https://en.wikipedia.org/wiki/Timeline_of_operating_systems)). Process scheduling should handle multiple processes, swap job to avoid idleness. There will be many processes that want to be executed. Time-sharing OS allows many users/processes to share the computing resources such as main memory, input/output(I/O) devices, files, etc.\n",
     "\n",
     "The OS has many components which work together to help carry out resource management duties. For example there is a memory manager(manages the usage of the main memory), various device drivers(carry out low-level interactions with hardware devices), I/O manager(handles data transfer between memory and I/O devices), process manager(creates and destroys processes), file system manager(manages the file system), etc. Another important component is the process scheduler, also known as the **Central Processing Unit**(CPU), which is the focus of this project.\n",
     "\n",
-    "![A shot of processes running on a multicore CPU and the resource usage](https://github.com/tony-wj/Julia_hw/blob/master/cpu_scheduling.png)\n",
+    "<!--![A shot of processes running on a multicore CPU and the resource usage](cpu_scheduling.png =100x20)-->\n",
+    "<img src=\"cpu_scheduling.png\" width=\"540\" height=\"270\" />\n",
+    "<center>Fig. 1: A shot of processes running on a 4-core CPU and the resource usage</center>\n",
     "\n",
     "The job of the scheduler is to assign tasks to CPUs, i.e. what is the next process to be run on which CPU. For a computer, there could be multiple CPUs and each CPU could have multiple cores. For a process, it could generate a number of threads to be executed at the same time. Since every core in a CPU could run its assigned task at the same time, we could seen a core as the most basic execution unit. In addition, since a thread is similar as a process(and in some OS they are treat nearly the same way) we could seen a thread as a process. Therefore, the number of processes that can be run at the same time($X$) can be expressed by the multiplication of the number of CPUs($C$) and the number of cores per CPU($c_{i}$):\n",
     "\n",
@@ -66,19 +68,23 @@
     "X = \\sum_{i=1}^{C} c_i\n",
     "$$\n",
     "\n",
-    "However, things are really complicated in reality. There may be dependencies or conflicts among different processes. A process cannot continue running without another process returning a result, or two processes are using the same resource so that they cannot be scheduled to run at the same time. In addition, scheduling among multicores brings more cost caused by **context switch**. When the ongoing process is being replaced by another process before it is done, its state information should be stored to somewhere else(main memory or hard disk) and the new process' state information(if exists) should be moved to CPU. This process is called context switch. Switching between different cores leads to more cost. Last but not least, a CPU cannot predict when a process will finish its execution and it is not possible for a CPU to know when a particular process will arrive.\n",
+    "However, things are really complicated in reality. There can be mainly two kinds of processes, one is called CPU-bound process and the other is called I/O-bound process, which should be treated differently. There may also be dependencies or conflicts among different processes. A process cannot continue running without another process returning a result, or two processes are using the same resource so that they cannot be scheduled to run at the same time. In addition, scheduling among multicores brings more cost caused by **context switch**. When the ongoing process is being replaced by another process before it is done, its state information should be stored to somewhere else(main memory or hard disk) and the new process' state information(if exists) should be moved to CPU. This process is called context switch. Switching between different cores leads to more cost. Last but not least, a CPU cannot predict when a process will finish its execution and it is not possible for a CPU to know when a particular process will arrive.\n",
     "\n",
     "Considering all the complexities, we will present a general model in this report to solve this problem and offer an efficient solution for scheduling processes in multicore CPU.\n",
     "\n",
     "### 1.2. Goals and Objectives ###\n",
     "\n",
+    "How the CPU, the bottleneck device in the whole computer, is scheduled, has a huge impact on the performance of the computer system. To make better decisions, the following objectives have to be met:\n",
+    "\n",
+    "- Minimize the total turnaround time: turnaround time is the period of time between the arrival of a process and the time it is finished, which should be as small as possible;\n",
+    "- Be fair to every process: there should not be any process being wait for a long time without being executed;\n",
+    "- Be as responsive as possible: a process should be treated soon after its arrival;\n",
+    "\n",
     "### 1.3. Report Outline ###\n",
     "\n",
-    "The first few sentences should give a quick overview of the entire project. Then, elaborate with a description of the problem that will be solved, a brief history (with [citations](https://en.wikipedia.org/wiki/Citation)) of how the problem came about, why it's important/interesting, and any other interesting facts you'd like to talk about. You should address and explain where the problem data is coming from (research? the internet? synthetically generated?) Also give an outline of the rest of the report.\n",
+    "This report will divide the whole problem into multiple stages, progressiely solving more complex versions of this problem. Staring with something simple that we know the arrival time and the duraiton of each process(model 2.A.a.), then comes multicores(model 2.A.b.), then we deal with process dependencies(model 2.A.c.). After talking about models under perfect information, we will use two different models: robust programming(model 2.B.) and stochastic programming(model 2.C.) to deal with uncertainty in arrival time and duraiton of processes.\n",
     "\n",
-    "This section should be 300-600 words long, and **should be accessible to a general audience** (don't assume your reader has taken the class!).\n",
-    "\n",
-    "For more help on using Markdown, see [this reference](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet).\n",
+    "After presenting the models, we will give our solutions to each of the models and discuss about the result of the solutions. Different test cases and data can be come up with or drawn from the internet. Comparisons between our scheduling optimization and extant scheduling algorithms will also be made in the discussion section.\n",
     "\n",
     "[shot]: https://github.com/tony-wj/Julia_hw/blob/master/cpu_scheduling.png"
    ]
@@ -211,8 +217,16 @@
     "## 6. Reference ##\n",
     "\n",
     "1. Operating Systems, Wikipedia, refer to https://en.wikipedia.org/wiki/Operating_system\n",
-    "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing"
+    "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing\n",
+    "3. History of CPU process scheduling, refer to http://dave-reed.com/csc539.S05/Lectures/CPUsched.ppt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
