basic math model added

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -96,36 +96,84 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2. Mathematical model ##\n",
+    "### 2.A Perfect Information ###\n",
+    "#### 2.A.a Knowing Arrival Time & Duration ####\n",
+    "We divide the time horizon into a number of time units. We only consider time in $(0, m]$ where $m$ is the maximum possible processing time. Let $\\mathcal{T}$ denote the set of time units, and $|\\mathcal{T}|=m$. Let $\\mathcal{N}$ denote the set of tasks, where $|\\mathcal{N}|=n$. Each process $n \\in \\mathcal{N}$ has following attributes: duration $s_n$, arrival time $t_n$. \n",
     "\n",
-    "A discussion of the modeling assumptions made in the problem (e.g. is it from physics? economics? something else?). Explain the decision variables, the constraints, and the objective function. Finally, show the optimization problem written in standard form. Discuss the model type (LP, QP, MIP, etc.). Equations should be formatted in $\\LaTeX$ within the IJulia notebook. For this section you may **assume the reader is familiar with the material covered in class**.\n",
+    "<img src=\"assignment_graph.png\" width=\"400\" height=\"400\" />\n",
+    "<center>Fig. 3: An example of time units assignment</center>\n",
     "\n",
-    "Here is an example of an equation:\n",
+    "The task scheduler assigns each process to the time units, hence we can formulate an Generalized Assignment Problem(GAP). Let binary decision variable $x_{ij}$ denote the j-th time unit is assigned to i-th process. The i-th process requires $s_i$ amount of time to process, and each time unit is at most associated with one process. We have:\n",
+    "\\begin{align}\n",
+    "\\sum\\limits_{j=1}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\sum\\limits_{i=1}^n x_{ij} \\leq 1 \\quad \\forall j \\in \\mathcal{T}\n",
+    "\\end{align}\n",
+    "Note we can only assign time units after arrival of each process, hence the first constraint should be modified as:\n",
+    "\\begin{align}\n",
+    "\\sum\\limits_{j = t_i}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\sum\\limits_{j = 1}^{t_i} x_{ij} = 0 \\quad \\forall i \\in \\mathcal{N}\n",
+    "\\end{align}\n",
+    "Each feasible assignment $\\mathbf{x}$ is measured by turnaround time $T(\\mathbf{x})$, fairness $F(\\mathbf{x})$, responsiveness $R(\\mathbf{x})$. And cost $S(\\mathbf{x})$ is included to penalize switch of processed between time units. \n",
     "\n",
-    "$$\n",
-    "\\begin{bmatrix}\n",
-    "  1 & 2 \\\\\n",
-    "  3 & 4\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix} x \\\\ y \\end{bmatrix} =\n",
-    "\\begin{bmatrix} 5 \\\\ 6 \\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "And here is an example of an optimization problem in standard form:\n",
-    "\n",
+    "The standard form of the model can be written as: \n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^n}}{\\text{maximize}}\\qquad& f_0(x) \\\\\n",
-    "\\text{subject to:}\\qquad& f_i(x) \\le 0 && i=1,\\dots,m\\\\\n",
-    "& h_j(x) = 0 && j=1,\\dots,r\n",
+    "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)\\\\\n",
+    "\\text{subject to:}\\qquad& \\sum\\limits_{j = t_i}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum\\limits_{j = 1}^{t_i} x_{ij} = 0 \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum\\limits_{i=1}^n x_{ij} \\leq 1 \\quad \\forall j \\in \\mathcal{T}\\\\\n",
+    "& x_{ij} \\in \\{0,1\\} \\quad \\forall i \\in \\mathcal{N} \\quad j \\in \\mathcal{T}\n",
     "\\end{aligned}\n",
-    "$$\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.A.b Multicores ####\n",
     "\n",
-    "For some quick tips on using $\\LaTeX$, see [this cheat sheet](http://users.dickinson.edu/~richesod/latex/latexcheatsheet.pdf)."
+    "Let $\\mathcal{C}$ denote the set of cores, and $|\\mathcal{C}|=c$. Binary decision variable $x_{ijk}$ donote the i-th process is assigned to the j-th time unit of core k. Another cost $S_c(x)$ is imposed if tasks is switched between cores. Now the standard form of the model can be rewritten as: \n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)-S_c(x) \\\\\n",
+    "\\text{subject to:}\\qquad& \\sum\\limits_{k = 1}^c \\sum\\limits_{j = t_i}^m x_{ijk} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum\\limits_{k = 1}^c \\sum\\limits_{j = 1}^{t_i} x_{ijk} = 0 \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum\\limits_{i=1}^n x_{ijk} \\leq 1 \\quad \\forall j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\\\\\n",
+    "& x_{ijk} \\in \\{0,1\\} \\quad \\forall i \\in \\mathcal{N} \\quad j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.A.c Process Dependency ####\n",
+    "If process h is dependent on process g, which means process h should be hanlded strictly after g temporally. \n",
+    "\n",
+    "\\begin{align}\n",
+    "j*x_{gjk}+1 \\leq j*x_{hjk} \\quad \\forall j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.B Robust Programming ###\n",
+    "#### 2.B.a Unknown Duration ####\n",
+    "If the duration of the process is uncertain and is subject to some distribution. Let $\\bar{s}$ denote the average duration. \n",
+    "\\begin{align}\n",
+    "s_i = \\bar{s_i}+\\rho_iu\n",
+    "\\end{align}\n",
+    "\n",
+    "#### 2.B.b Unknown Duration & Unknown Arrival Time ####\n",
+    "\n",
+    "Sleepy zzZ"
    ]
   },
   {
@@ -144,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -229,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
