basic math model added

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -107,18 +107,27 @@
     "<center>Fig. 3: An example of time units assignment</center>\n",
     "\n",
     "The task scheduler assigns each process to the time units, hence we can formulate an Generalized Assignment Problem(GAP). Let binary decision variable $x_{ij}$ denote the j-th time unit is assigned to i-th process. The i-th process requires $s_i$ amount of time to process, and each time unit is at most associated with one process. We have:\n",
+    "\n",
+    "$$\n",
     "\\begin{align}\n",
     "\\sum\\limits_{j=1}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
     "\\sum\\limits_{i=1}^n x_{ij} \\leq 1 \\quad \\forall j \\in \\mathcal{T}\n",
     "\\end{align}\n",
+    "$$\n",
+    "\n",
     "Note we can only assign time units after arrival of each process, hence the first constraint should be modified as:\n",
+    "\n",
+    "$$\n",
     "\\begin{align}\n",
     "\\sum\\limits_{j = t_i}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
     "\\sum\\limits_{j = 1}^{t_i} x_{ij} = 0 \\quad \\forall i \\in \\mathcal{N}\n",
     "\\end{align}\n",
+    "$$\n",
+    "\n",
     "Each feasible assignment $\\mathbf{x}$ is measured by turnaround time $T(\\mathbf{x})$, fairness $F(\\mathbf{x})$, responsiveness $R(\\mathbf{x})$. And cost $S(\\mathbf{x})$ is included to penalize switch of processed between time units. \n",
     "\n",
     "The standard form of the model can be written as: \n",
+    "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)\\\\\n",
@@ -137,6 +146,7 @@
     "#### 2.A.b Multicores ####\n",
     "\n",
     "Let $\\mathcal{C}$ denote the set of cores, and $|\\mathcal{C}|=c$. Binary decision variable $x_{ijk}$ donote the i-th process is assigned to the j-th time unit of core k. Another cost $S_c(x)$ is imposed if tasks is switched between cores. Now the standard form of the model can be rewritten as: \n",
+    "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)-S_c(x) \\\\\n",
@@ -155,9 +165,11 @@
     "#### 2.A.c Process Dependency ####\n",
     "If process h is dependent on process g, which means process h should be hanlded strictly after g temporally. \n",
     "\n",
+    "$$\n",
     "\\begin{align}\n",
     "j*x_{gjk}+1 \\leq j*x_{hjk} \\quad \\forall j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -167,9 +179,12 @@
     "### 2.B Robust Programming ###\n",
     "#### 2.B.a Unknown Duration ####\n",
     "If the duration of the process is uncertain and is subject to some distribution. Let $\\bar{s}$ denote the average duration. \n",
+    "\n",
+    "$$\n",
     "\\begin{align}\n",
     "s_i = \\bar{s_i}+\\rho_iu\n",
     "\\end{align}\n",
+    "$$\n",
     "\n",
     "#### 2.B.b Unknown Duration & Unknown Arrival Time ####\n",
     "\n",
