basic math model added

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -109,19 +109,19 @@
     "The task scheduler assigns each process to the time units, hence we can formulate an Generalized Assignment Problem(GAP). Let binary decision variable $x_{ij}$ denote the j-th time unit is assigned to i-th process. The i-th process requires $s_i$ amount of time to process, and each time unit is at most associated with one process. We have:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\sum\\limits_{j=1}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
-    "\\sum\\limits_{i=1}^n x_{ij} \\leq 1 \\quad \\forall j \\in \\mathcal{T}\n",
-    "\\end{align}\n",
+    "\\begin{aligned}\n",
+    "\\sum\\limits_{j=1}^m x_{ij} = s_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\sum\\limits_{i=1}^n x_{ij} \\leq 1 \\qquad \\forall j \\in \\mathcal{T}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "Note we can only assign time units after arrival of each process, hence the first constraint should be modified as:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\sum\\limits_{j = t_i}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
-    "\\sum\\limits_{j = 1}^{t_i} x_{ij} = 0 \\quad \\forall i \\in \\mathcal{N}\n",
-    "\\end{align}\n",
+    "\\begin{aligned}\n",
+    "\\sum\\limits_{j = t_i}^m x_{ij} = s_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\sum\\limits_{j = 1}^{t_i} x_{ij} = 0 \\qquad \\forall i \\in \\mathcal{N}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "Each feasible assignment $\\mathbf{x}$ is measured by turnaround time $T(\\mathbf{x})$, fairness $F(\\mathbf{x})$, responsiveness $R(\\mathbf{x})$. And cost $S(\\mathbf{x})$ is included to penalize switch of processed between time units. \n",
@@ -131,10 +131,10 @@
     "$$\n",
     "\\begin{aligned}\n",
     "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)\\\\\n",
-    "\\text{subject to:}\\qquad& \\sum\\limits_{j = t_i}^m x_{ij} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
-    "& \\sum\\limits_{j = 1}^{t_i} x_{ij} = 0 \\quad \\forall i \\in \\mathcal{N}\\\\\n",
-    "& \\sum\\limits_{i=1}^n x_{ij} \\leq 1 \\quad \\forall j \\in \\mathcal{T}\\\\\n",
-    "& x_{ij} \\in \\{0,1\\} \\quad \\forall i \\in \\mathcal{N} \\quad j \\in \\mathcal{T}\n",
+    "\\text{subject to:}\\qquad& \\sum\\limits_{j = t_i}^m x_{ij} = s_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum\\limits_{j = 1}^{t_i} x_{ij} = 0 \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum\\limits_{i=1}^n x_{ij} \\leq 1 \\qquad \\forall j \\in \\mathcal{T}\\\\\n",
+    "& x_{ij} \\in \\{0,1\\} \\qquad \\forall i \\in \\mathcal{N} \\qquad j \\in \\mathcal{T}\n",
     "\\end{aligned}\n",
     "$$\n"
    ]
