basic math model added

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -130,8 +130,8 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)\\\\\n",
-    "\\text{subject to:}\\qquad& \\sum\\limits_{j = t_i}^m x_{ij} = s_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\underset{x \\in \\mathbb{R^{nm}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)\\\\\n",
+    "\\text{subject to:}\\qquad& \\sum_{j = t_i}^m x_{ij} = s_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{j = 1}^{t_i} x_{ij} = 0 \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{i=1}^n x_{ij} \\leq 1 \\qquad \\forall j \\in \\mathcal{T}\\\\\n",
     "& x_{ij} \\in \\{0,1\\} \\qquad \\forall i \\in \\mathcal{N} \\qquad j \\in \\mathcal{T}\n",
@@ -149,9 +149,9 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)-S_c(x) \\\\\n",
-    "\\text{subject to:}\\qquad& \\sum\\limits_{k = 1}^c \\sum\\limits_{j = t_i}^m x_{ijk} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
-    "& \\sum_{k = 1}^c \\sum\\limits_{j = 1}^{t_i} x_{ijk} = 0 \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\underset{x \\in \\mathbb{R^{nmc}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)-S_c(x) \\\\\n",
+    "\\text{subject to:}\\qquad& \\sum_{k = 1}^c \\sum_{j = t_i}^m x_{ijk} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum_{k = 1}^c \\sum_{j = 1}^{t_i} x_{ijk} = 0 \\quad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{i=1}^n x_{ijk} \\leq 1 \\quad \\forall j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\\\\\n",
     "& x_{ijk} \\in \\{0,1\\} \\quad \\forall i \\in \\mathcal{N} \\quad j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\n",
     "\\end{aligned}\n",
