basic math model added

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -126,8 +126,13 @@
     "\n",
     "Each feasible assignment $\\mathbf{x}$ is measured by turnaround time $T(\\mathbf{x})$, fairness $F(\\mathbf{x})$, responsiveness $R(\\mathbf{x})$. And cost $S(\\mathbf{x})$ is included to penalize switch of processed between time units. \n",
     "\n",
-    "The standard form of the model can be written as: \n",
-    "\n",
+    "The standard form of the model can be written as: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\begin{aligned}\n",
     "\\underset{x \\in \\mathbb{R^{nm}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)\\\\\n",
